# oxyde

./: Cargo.toml  README.md  rustfmt.toml
src/: app.rs  egui_wgpu_renderer.rs  gui_render_wgpu.rs  input.rs  lib.rs  logging.rs  wgpu_utils.rs
src/wgpu_utils/: binding_builder.rs  binding_glsl.rs  buffers.rs  mod.rs  ping_pong_buffer.rs  ping_pong_texture.rs  render_handles.rs  shader_composer.rs  shaders.rs  uniform_buffer.rs  wgsl_preprocessor.rs
