[package]
name = "oxyde"
version = "0.0.2"
authors = ["DE SMET Enguerrand"]
edition = "2021"

[features]
glsl = ["dep:shaderc"]
icon = ["dep:image"]
log = ["dep:log", "dep:fern", "dep:chrono"]

[dependencies]
winit = "0.29"

anyhow = "1"
log = {version = "0.4", optional = true }
fern = { version = "0.6", features = [ "colored" ], optional = true }
chrono = { version = "0.4", optional = true }

wgpu = { version = "0.19", features = [ "spirv" ] }
pollster = "0.3"
bytemuck = { version = "1.13", features = [ "derive" ] }

egui = "0.26.2"
egui-wgpu = "0.26.2"
egui-winit = "0.26.2"

spin_sleep = "1"

image = { version = "0.24", optional = true }
shaderc = { version = "0.8", optional = true }

nalgebra-glm = { version = "0.18", features = ["serde-serialize"] }
