[package]
name = "oxyde"
version = "0.1.0"
authors = ["DE SMET Enguerrand"]
edition = "2021"

[features]
glsl = ["dep:shaderc"]
icon = ["dep:image"]
log = ["dep:log"]
naga = ["dep:naga_oil", "wgpu/naga-ir"]

egui = ["dep:winit", "dep:egui", "dep:egui-winit", "dep:egui-wgpu"]
application = ["dep:winit", "dep:spin_sleep", "dep:pollster", "dep:glam"]

[dependencies]
winit = { version = "0.29", optional = true }

anyhow = "1"
log = {version = "0.4", optional = true }

wgpu = { version = "0.19", features = [ "spirv" ] }
pollster = { version = "0.3",  optional = true }
bytemuck = { version = "1.13", features = [ "derive" ] }

egui = { version = "0.26.2", optional = true }
egui-wgpu = { version = "0.26.2", optional = true }
egui-winit = { version = "0.26.2", optional = true }

spin_sleep = { version = "1.2", optional = true }

image = { version = "0.25", optional = true }
shaderc = { version = "0.8", optional = true }

glam = { version = "0.26", optional = true }
naga_oil = { version = "0.13.0", optional = true }
